products contact uis

--- a/contact.html
+++ b/contact.html
@@ -2,13 +2,18 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Root Terminal Labs</title>
+    <title>Contact Us - Root Terminal Labs</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <main class="terminal">
-      <div id="hero"></div>
+      <section id="contact">
+        <h2>Contact Us</h2>
+        <p>Get in touch with us:</p>
+        <a href="https://wa.me/9988776654" target="_blank">WhatsApp</a>
+        <a href="mailto:rtl@gmail.com">Email</a>
+      </section>
     </main>
 
     <footer>
