--- a/products.html
+++ b/products.html
@@ -2,13 +2,19 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Root Terminal Labs</title>
+    <title>Products - Root Terminal Labs</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <main class="terminal">
-      <div id="hero"></div>
+      <section id="products">
+        <h2>Products</h2>
+        <p>
+          <a href="https://kr-log.in/spyne/" target="_blank">Spyne</a> -
+          Industrial Data Foundation
+        </p>
+      </section>
     </main>
 
     <footer>
