--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Contact Us - Root Terminal Labs</title>
+    <title>Contact Us - Root Terminal Lab</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
   </head>
@@ -10,14 +10,17 @@
     <main class="terminal">
       <section id="contact">
         <h2>Contact Us</h2>
-        <p>Get in touch with us:</p>
-        <a href="https://wa.me/9988776654" target="_blank">WhatsApp</a>
-        <a href="mailto:rtl@gmail.com">Email</a>
+        <p>
+          <a href="https://wa.me/9988776654" target="_blank">WhatsApp</a>
+        </p>
+        <p>
+          <a href="mailto:rtl@gmail.com">Email</a>
+        </p>
       </section>
     </main>
 
     <footer>
-      <span>Root Terminal Labs Pvt Limited</span>
+      <span>Root Terminal Lab Pvt Limited</span>
       <nav>
         <a href="index.html">Home</a>
         <a href="products.html">Products</a>
