--- a/products.html
+++ b/products.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Products - Root Terminal Labs</title>
+    <title>Products - Root Terminal Lab</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
   </head>
@@ -18,7 +18,7 @@
     </main>
 
     <footer>
-      <span>Root Terminal Labs Pvt Limited</span>
+      <span>Root Terminal Lab Pvt Limited</span>
       <nav>
         <a href="index.html">Home</a>
         <a href="products.html">Products</a>
