--- a/contact.html
+++ b/contact.html
@@ -11,10 +11,17 @@
       <section id="contact">
         <h2>Contact Us</h2>
         <p>
-          <a href="https://wa.me/9988776654" target="_blank">WhatsApp</a>
+          <a
+            href="https://wa.me/9791536477?text=Hello%20Team,%20I%20am%20interested%20in%20your%20products%20and%20services.%20Please%20get%20back%20to%20me."
+            target="_blank"
+            >WhatsApp</a
+          >
         </p>
         <p>
-          <a href="mailto:rtl@gmail.com">Email</a>
+          <a
+            href="mailto:rootterminallab@gmail.com?subject=Inquiry&body=Hello%20Team,%20I%20am%20interested%20in%20your%20products%20and%20services.%20Please%20get%20back%20to%20me."
+            >Email</a
+          >
         </p>
       </section>
     </main>
