--- a/products.html
+++ b/products.html
@@ -10,10 +10,7 @@
     <main class="terminal">
       <section id="products">
         <h2>Products</h2>
-        <p>
-          <a href="https://kr-log.in/spyne/" target="_blank">Spyne</a> -
-          Industrial Data Foundation
-        </p>
+        <p><a href="spyne/">Spyne</a> - Industrial Data Foundation</p>
       </section>
     </main>
 
