--- a/products.html
+++ b/products.html
@@ -10,7 +10,10 @@
     <main class="terminal">
       <section id="products">
         <h2>Products</h2>
-        <p><a href="spyne/">Spyne</a> - Industrial Data Foundation</p>
+        <p>
+          <a href="spyne/" target="_blank" rel="noopener noreferrer">Spyne</a> -
+          Industrial Data Foundation
+        </p>
       </section>
     </main>
 
